Fix services section text overflow on mobile

--- a/style.css
+++ b/style.css
@@ -225,6 +225,9 @@ body h3 {
 
 #services h3, #services p {
     color: white;
+}
+
+#services h3 {
     white-space: nowrap;
 }
 
@@ -588,7 +591,7 @@ footer a:hover {
     }
 
     #services {
-        padding: 12px;
+        padding: 18px;
     }
 
     #about {
